# velecs-input-cpp

./: CMakeLists.txt  README.md
include/velecs/input/: Action.hpp  ActionMap.hpp  ActionProfile.hpp  Common.hpp  Event.hpp  Input.hpp  InputBinding.hpp  InputPollingState.hpp  InputStatus.hpp  ModifierKey.hpp  PollingData.hpp
include/velecs/input/InputBindings/: ButtonBinding.hpp  Common.hpp  InputBinding.hpp  InputBindingContext.hpp  Vec2Binding.hpp
src/: Action.cpp  ActionMap.cpp  ActionProfile.cpp  Input.cpp  InputPollingState.cpp  InputStatus.cpp
src/InputBindings/: ButtonBinding.cpp  InputBinding.cpp  Vec2Binding.cpp
